2010-01-14  Doug Simons  <doug.simons@testplant.com>

	* Source/NSWindow.m (-_initBackendWindow): Raise an
	exception instead of crashing (at least on Windows) when we
	fail to obtain a window from the back end.

2010-01-14 07:08-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSApplication.m: For hide: perform miniaturizeAll: 
	on Windows, since hiding the app causes it to be inaccessible on 
	that platform.

2010-01-14 04:07-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSToolbarFrameworkPrivate.h: Correct include for new
	location of GSWidnowDecorationView.h.

2010-01-14 03:19-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSWindowDecorationView.h: Removed from here since I moved
	it to the GNUstepGUI headers.

2010-01-13 15:49-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Added methods
	to support adding menus and processing commands from windows, if
	appropriate.
	* Headers/Additions/GNUstepGUI/GSWindowDecorationView.h: Added
	new methods for menu and toolbar flags.
	* Headers/AppKit/NSInterfaceStyle.h: Added new interface style.
	* Source/GNUmakefile: Added header.
	* Source/GSStandardWindowDecorationView.m: Change include
	to include header in new location.
	* Source/GSThemeMenu.m: Default theme implementation for
	Menus.
	* Source/GSWindowDecorationView.m: Add the setHasMenu:/setHasToolbar:
	flags.
	* Source/NSWindow.m: Use the theme to set the menu instead of
	setting it directly.

2010-01-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-writeSafelyToURL:ofType:...): Ensure
	proper working of autosaving for subclasses that override
	-writeWithBackupToFile:ofType:saveOperation.

	* Source/NSProgressIndicator.m (-setDisplayedWhenStopped:): Fix
	incorrect assignment which made this method a no-op.

2010-01-11 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/Italian.lproj/Localizable.strings: Regenerate this